send to group logic refactoring