@@ -1,11 +1,14 @@
 package ru.javaops.masterjava.service.mail;
 
+import lombok.extern.slf4j.Slf4j;
+import one.util.streamex.StreamEx;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.*;
-import java.util.stream.Collectors;
 
+@Slf4j
 public class MailServiceExecutor {
     private static final String OK = "OK";
 
@@ -13,19 +16,19 @@ public class MailServiceExecutor {
     private static final String INTERRUPTED_BY_TIMEOUT = "+++ Interrupted by timeout";
     private static final String INTERRUPTED_EXCEPTION = "+++ InterruptedException";
 
-    private final ExecutorService mailExecutor = Executors.newFixedThreadPool(8);
+    private static final ExecutorService mailExecutor = Executors.newFixedThreadPool(8);
 
-    public GroupResult sendToList(final String template, final Set<String> emails) throws Exception {
+    public static GroupResult sendBulk(final Set<Addressee> addressees, final String subject, final String body) throws Exception {
         final CompletionService<MailResult> competitionService = new ExecutorCompletionService<>(mailExecutor);
-        List<Future<MailResult>> futures = emails.stream()
-                .map(email -> competitionService.submit(() -> sendToUser(template, email)))
-                .collect(Collectors.toList());
+        List<Future<MailResult>> futures = StreamEx.of(addressees)
+                .map(addressee -> competitionService.submit(() -> MailSender.sendTo(addressee, subject, body)))
+                .toList();
         return new Callable<GroupResult>() {
             private int success = 0;
             private List<MailResult> failed = new ArrayList<>();
 
             @Override
-            public GroupResult call() throws Exception {
+            public GroupResult call() {
                 while (!futures.isEmpty()) {
                     try {
                         Future<MailResult> future = competitionService.poll(10, TimeUnit.SECONDS);
@@ -48,29 +51,9 @@ public class MailServiceExecutor {
                         return cancelWithFail(INTERRUPTED_EXCEPTION);
                     }
                 }
-                /*
-                for (Future<MailResult> future : futures) {
-                    MailResult result;
-                    try {
-                        result = future.get(10, TimeUnit.SECONDS);
-                    } catch (InterruptedException e) {
-                        return cancelWithFail(INTERRUPTED_EXCEPTION);
-                    } catch (ExecutionException e) {
-                        return cancelWithFail(e.getCause().toString());
-                    } catch (TimeoutException e) {
-                        return cancelWithFail(INTERRUPTED_BY_TIMEOUT);
-                    }
-                    if (result.isOk()) {
-                        success++;
-                    } else {
-                        failed.add(result);
-                        if (failed.size() >= 5) {
-                            return cancelWithFail(INTERRUPTED_BY_FAULTS_NUMBER);
-                        }
-                    }
-                }
-                */
-                return new GroupResult(success, failed, null);
+                var groupResult = new GroupResult(success, failed, null);
+                log.info("groupResult: {}", groupResult);
+                return groupResult;
             }
 
             private GroupResult cancelWithFail(String cause) {
@@ -78,63 +61,5 @@ public class MailServiceExecutor {
                 return new GroupResult(success, failed, cause);
             }
         }.call();
-    }
-
-
-    // dummy realization
-    public MailResult sendToUser(String template, String email) throws Exception {
-        try {
-            Thread.sleep(500);  //delay
-        } catch (InterruptedException e) {
-            // log cancel;
-            return null;
-        }
-        return Math.random() < 0.7 ? MailResult.ok(email) : MailResult.error(email, "Error");
-    }
-
-    public static class MailResult {
-        private final String email;
-        private final String result;
-
-        private static MailResult ok(String email) {
-            return new MailResult(email, OK);
-        }
-
-        private static MailResult error(String email, String error) {
-            return new MailResult(email, error);
-        }
-
-        public boolean isOk() {
-            return OK.equals(result);
-        }
-
-        private MailResult(String email, String cause) {
-            this.email = email;
-            this.result = cause;
-        }
-
-        @Override
-        public String toString() {
-            return '(' + email + ',' + result + ')';
-        }
-    }
-
-    public static class GroupResult {
-        private final int success; // number of successfully sent email
-        private final List<MailResult> failed; // failed emails with causes
-        private final String failedCause;  // global fail cause
-
-        public GroupResult(int success, List<MailResult> failed, String failedCause) {
-            this.success = success;
-            this.failed = failed;
-            this.failedCause = failedCause;
-        }
-
-        @Override
-        public String toString() {
-            return "Success: " + success + '\n' +
-                    "Failed: " + failed.toString() + '\n' +
-                    (failedCause == null ? "" : "Failed cause" + failedCause);
-        }
     }
 }
